--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 
 .navbar-list ul{
     display: flex;
-
 }
 
 .navbar-list li,a{
@@ -43,7 +42,7 @@
     background-color: rgba(255, 255, 255, 0.6);
     justify-content: space-between;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 99.5%;
     height: 70px;
 }
@@ -87,6 +86,11 @@
     padding-bottom: 30px;
 }
 
+.about-list :hover{
+    font-size: 20px;
+    color: black;
+}
+
 .studio-data{
     margin: 0px 200px;
     background-color: #f9f6f6;
@@ -121,9 +125,18 @@
     background-color: #f9f6f6;
 }
 
+.client_img{
+    border-radius: 20px;
+}
+
 .role{
     color: #989898;
     font-size: 15px;
+}
+
+.testimonials-list :hover{
+    font-size: 20px;
+    color: black;
 }
 
 .logo{
@@ -140,43 +153,108 @@
     margin-right: 200px;
 }
 
-.footer-text{
-    justify-content: space-between;
-    width: 70%;
-    color: #fff;
-    background-color: #434343;
-    height: 70px;
-    margin-right: 30px;
-    margin-left: 40px;
-}
-
-.text{
-    font-family: 'Times New Roman', Times, serif;
+ .footer-text{
     font-size: 20px;
-    margin: 20px 10px;
+    margin: 5px 57px;
+    color: white;
 }
-.footer-container{
+
+ .footer-data{
     display: flex;
-    width: 100%;
-    height: 400px;
-    background-color: #353535;
+    background-color: rgb(52, 51, 51);
+    justify-content: space-between;
+    position: absolute;
+     margin: 2px 200px;
+    /* width: 90% */
+    height: 70px;  
 }
 
-.btn_2 button{
-width: 20px;
-margin: 30px 30px;
-padding: 10px;
-font-size: 20px;
-font-family: 'Times New Roman', Times, serif;
+ .btn_2{
+    width:300px;
+    height: 30px;
+    margin: 22px 112px;
+    justify-content: center;
+    background-color: rgb(67, 222, 222); 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    color: #f9f6f6;
+    border: 0px;
+    
 }
 
-.location .company .support .ARK{
-    text-align: justify;
-    padding: 5px;
+.footer-btn :hover{
+    color: blue;
+     justify-content: center;
+    align-items: center;  
+}
 
+.footer-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto;
+    text-align: center;
+    padding-top: 150px;
+    padding-bottom: 30px;
+    background-color: rgb(33, 32, 32);
+    color: #f3f2f2;
 }
 
 .fa-brands{
-    background-color: red;
-    color: #fff;
+    color: #f9f6f6;
 }
+
+
+
+.company ul{
+    list-style-type: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    margin: 21px 100px;
+    text-align: justify;
+
+}
+
+.support ul{
+    list-style-type: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-align: justify; 
+    margin: 21px 50px;
+
+}
+
+.info{
+    margin: 0px 66px;
+}
+
+.info_1{
+    margin: 0px 50px;
+    padding-right: 50px;
+} 
+
+.info_2{
+    margin: 0px 50px;
+    padding-right: 50px;
+    
+}
+
+.address{
+    
+     font-size: 20px;
+    /* margin: 20px 31px; */
+}
+
+.contact{
+    padding: 0px 100px;
+    text-align: center;
+}
+
+.copy-rights{
+    text-align: center;
+}
+
+@media only screen and (min-width: 1200px) {}
+
+@media only screen and (min-width: 768px) {}
+
+
