--- a/style.css
+++ b/style.css
@@ -251,10 +251,10 @@
 
 .copy-rights{
     text-align: center;
+
 }
 
-@media only screen and (min-width: 1200px) {}
-
-@media only screen and (min-width: 768px) {}
-
-
+@media only screen and (max-width: 600px) {
+    body{}
+    
+}
